--- a/style.css
+++ b/style.css
@@ -22,7 +22,6 @@ header {
   height: 10vh;
 }
 
-
 .navbar a:hover {
   border-radius: 10px;
   background: linear-gradient(
@@ -69,13 +68,180 @@ header {
 .sec2 {
   background-color: #4386a1;
   width: 100%;
-  height: 100vh;
+  height: 200vh;
 }
 .sec3 {
-  background-color: #93a143;
   width: 100%;
   height: 100vh;
+  position: relative;
+  overflow: hidden;
 }
+
+#top {
+  width: 100%;
+  height: 50vh;
+  background-color: #fff;
+  position: absolute;
+  top: 0%;
+  overflow: hidden;
+
+  h1 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 18vw;
+  }
+}
+#center {
+  width: 100%;
+  height: 100vh;
+  background-color: #000000;
+}
+#bottom {
+  width: 100%;
+  height: 50vh;
+  background-color: #fff;
+  position: absolute;
+  bottom: 0%;
+  overflow: hidden;
+  h1 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 18vw;
+  }
+}
+
+#top_head {
+  top: 100% !important;
+}
+#bottom_head {
+  top: 0% !important;
+}
+
+.code1 {
+  width: 40%;
+  margin: auto;
+  padding: 20px;
+  animation: appear 100s linear;
+  animation-timeline: view();
+  animation-range: entry 0% cover 40%;
+}
+
+  @keyframes appear {
+    from {
+      opacity: 0;
+      transform: translateX(-500px);
+    }
+    to {
+      opacity: 1;
+      transform: translateX(0px);
+    }
+  }
+
+
+
+
+#cssportal-grid {
+	display: grid;
+	grid-template-rows: repeat(6, 1fr);
+	grid-template-columns: repeat(4, 1fr);
+	gap: 20px;
+	width: 100%;
+	height: 100%;
+}
+#div1 {
+	grid-area: 1 / 2 / 2 / 3;
+	background-color: rgba(73,254,241, 0.5);
+}
+#div2 {
+	grid-area: 2/2/3/3;
+	background-color: rgba(46,29,151, 0.5);
+}
+#div3 {
+	grid-area: 3/2/4/3;
+	background-color: rgba(48,53,237, 0.5);
+}
+#div4 {
+	grid-area: 4/2/5/3;
+	background-color: rgba(198,102,174, 0.5);
+}
+#div5 {
+	grid-area: 5/2/6/3;
+	background-color: rgba(158,126,129, 0.5);
+}
+#div6 {
+	grid-area: 6/2/7/3;
+	background-color: rgba(250,55,140, 0.5);
+}
+#div7 {
+	grid-area: 1/3/2/4;
+	background-color: rgba(10,178,211, 0.5);
+}
+#div8 {
+	grid-area: 2/3/3/4;
+	background-color: rgba(167,161,161, 0.5);
+}
+#div9 {
+	grid-area: 3/3/4/4;
+	background-color: rgba(95,81,48, 0.5);
+}
+#div10 {
+	grid-area: 4/3/5/4;
+	background-color: rgba(36,104,133, 0.5);
+}
+#div11 {
+	grid-area: 5/3/6/4;
+	background-color: rgba(1,64,103, 0.5);
+}
+#div12 {
+	grid-area: 6/3/7/4;
+	background-color: rgba(230,81,19, 0.5);
+}
+
+.sec4 {
+  padding:50px 0px;
+  background-color: #f3f3f3;
+  width: 100%;
+  height: 100vh;
+text-align: center;
+
+
+  #card{
+    width: 150px;
+    height: 150px;
+    background: rgb(34,193,195);
+    background: linear-gradient(0deg, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 100%);
+    border-radius: 10px;
+    
+  }
+}
+
+
+@keyframes fade-in{
+  from {
+    opacity: 0;
+    clip-path: inset(15% 20% 15% 20%);
+}
+
+to {
+    opacity: 1;
+    clip-path: inset(0% 0% 0% 0%);
+}
+}
+
+#card{
+  
+  view-timeline-name: --revealing-image;
+  view-timeline-axis: block;
+  animation: linear fade-in both;
+  animation-timeline: --revealing-image;
+  animation-range: entry 25% cover 50%;
+}
+
+
 
 @media (max-width: 799px) {
   .header {
